--- a/Index.html
+++ b/Index.html
@@ -106,7 +106,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img class="logo" src="logo.png" alt="Logo">
+            <img class="logo" src="IMG_3928.jpeg" alt="Logo">
         </div>
         <div class="header">
             Facebook Security
